--- a/views/profile/faq.ejs
+++ b/views/profile/faq.ejs
@@ -1,12 +1,12 @@
 <!-- FAQ page -->
 <!-- header -->
 <%-include ('../partials/header-internal.ejs')%>
-
-<!-- back title bar -->
 <%-include ('../partials/emptybackbar.ejs')%>
+
+<!-- header title -->
 <div class="col text-center">
-    <h1>FAQ</h1>
-    </div>
+  <h1><bold>ABOUT US</bold></h1>
+</div>
 </div>
 
 <div class="container mt-3">
