--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -22,7 +22,7 @@
           </div>
         </label>
         <input type="file" name="fileToUpload" id="fileToUpload">
-        <input class="material-symbols-rounded editicon" type="submit" value="Upload" name="submit">
+        <input class="btn material-symbols-rounded editicon" type="submit" value="Upload" name="submit">
       </form>
     </div>
   </div>
