--- a/views/saved/saved.ejs
+++ b/views/saved/saved.ejs
@@ -9,22 +9,20 @@
 </div>
 </div>
 
-<div class="container p-5 my-5">
+<div class="container p-4" style="margin-top: 100px;">
   <div class="row">
     <a href="/saved/persona">
-      <div class="card col btn p-5" id="title">Persona
+      <div class="card col btn p-5">
+        <i class="fa-solid fa-person-dots-from-line fa-2xl"></i>
+        <h5 class="pt-4">Persona</h5>
       </div>
     </a>
   </div> <br><br>
   <div class="row">
     <a href="/dialogue/saved">
-      <div class="card col btn p-5" id="title">Dialogue
-      </div>
-    </a>
-  </div> <br><br>
-  <div class="row">
-    <a href="/persona/saved-prompt">
-      <div class="card col btn p-5" id="title">Prompt
+      <div class="card col btn p-5">
+        <i class="fa-solid fa-comment-dots fa-2xl"></i>
+        <h5 class="pt-4">Dialogue</h5>
       </div>
     </a>
   </div>
