--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,20 +6,16 @@
       <!-- save  -->
       <div class="icon col pt-3">
         <a href="/saved">
-          <span class="material-symbols-rounded">
-            collections_bookmark
-            </span>
-          <p>Saved</p>
+          <i class="fa-solid fa-book-bookmark fa-2xl"></i>
+          <p class = "p-1">Saved</p>
         </a>
       </div>
 
       <!-- persona -->
       <div class="icon col pt-3">
         <a href="/persona">
-          <span class="material-symbols-rounded">
-            border_color
-            </span>
-          <p>Persona</p>
+          <i class="fa-solid fa-person-dots-from-line fa-2xl"></i>
+          <p class="p-1">Persona</p>
         </a>
       </div>
 
@@ -40,20 +36,16 @@
       <!-- dialogue -->
       <div class="icon col pt-3">
         <a href="/dialogue">
-          <span class="material-symbols-rounded">
-            forum
-            </span>
-          <p>Dialogue</p>
+          <i class="fa-solid fa-comment-dots fa-2xl"></i>
+          <p class="p-1">Dialogue</p>
         </a>
       </div>
 
       <!-- profile -->
       <div class="icon col pt-3">
         <a href="/profile">
-          <span class="material-symbols-rounded">
-            account_circle
-            </span>
-          <p>Profile</p>
+          <i class="fa-solid fa-circle-user fa-2xl"></i>
+          <p class="p-1">Profile</p>
         </a>
       </div>
     </div>
