--- a/views/saved/saved.ejs
+++ b/views/saved/saved.ejs
@@ -13,7 +13,7 @@
   <div class="row">
     <a href="/saved/persona">
       <div class="card col btn p-5">
-        <i class="fa-solid fa-person-dots-from-line fa-2xl"></i>
+        <i class="fa-solid fa-star fa-2xl"></i>
         <h5 class="pt-4">Persona</h5>
       </div>
     </a>
@@ -21,7 +21,7 @@
   <div class="row">
     <a href="/dialogue/saved">
       <div class="card col btn p-5">
-        <i class="fa-solid fa-comment-dots fa-2xl"></i>
+        <i class="fa-solid fa-heart fa-2xl"></i>
         <h5 class="pt-4">Dialogue</h5>
       </div>
     </a>
