--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -66,9 +66,7 @@
           <a href="/saved/persona">
             <div class="row">
               <div class="col-2">
-                <span class="material-symbols-rounded">
-                  person
-                  </span>
+                <i class="fa-solid fa-star"></i>
               </div>
               <div class="col"id="menubtn">Saved Persona</div>
             </div>
@@ -81,9 +79,7 @@
           <a href="/saved/dialogue">
             <div class="row">
               <div class="col-2">
-                <span class="material-symbols-rounded">
-                  chat
-                  </span>
+                <i class="fa-solid fa-heart"></i>
               </div>
               <div class="col"id="menubtn">Saved Dialogue</div>
             </div>
