--- a/views/saved/saved-persona.ejs
+++ b/views/saved/saved-persona.ejs
@@ -6,13 +6,17 @@
 <%-include ('../partials/emptybackbar.ejs')%>
 <div class="col text-center">
   <h1 class="align-middle">SAVED PERSONA</h1>
-  <form id="savePDF" action="/saved/persona/save-as-pdf" method="post">
+  <form action="/saved/persona/save-as-pdf" method="post">
     <input id=savePDFInput type="hidden" name="personaList" value="" />
     <button class="btn btn-sm position-absolute top-50 end-0 translate-middle material-symbols-rounded" id="savePDFButton" disabled>picture_as_pdf</button>
   </form>
-  <form id="savePDF" action="/persona/saved-persona/dialogue-filters" method="post">
+  <form action="/persona/saved-persona/dialogue-filters" method="post">
     <input id=gotoDialogueInput type="hidden" name="personaList" value="" />
     <button class="btn btn-sm material-symbols-rounded text-center" id="gotoDialogueButton" disabled>forum</button>
+  </form> 
+  <form action="/persona/saved-persona/delete-persona" method="post">
+    <input id=deletePersonaInput type="hidden" name="personaIDList" value="" />
+    <button class="btn btn-sm material-symbols-rounded text-center" id="deletePersonaButton" disabled>delete</button>
   </form>
 </div>
 </div>
@@ -25,7 +29,7 @@
       <h2 class="accordion-header">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse<%- [i] %>" aria-expanded="false" aria-controls="flush-collapse<%- [i] %>">
           <div class="form-check form-switch text-center">
-            <input class="form-check-input personaCheckbox" type="checkbox" id="<%- savedPersona[i].persona %>">
+            <input class="form-check-input personaCheckbox" type="checkbox" id="<%- savedPersona[i].persona %>" value="<%- savedPersona[i]._id %>">
             <p class="card-title"><%- savedPersona[i].date %></p>
           </div>
         </button>
@@ -43,31 +47,40 @@
 <script>
   $(document).ready(function() {
     let personaList = []
+    let personaIDList = []
 
     // Add event listener to the checkboxes
     $('.personaCheckbox').on('click', async (event) => {
       console.log("checked")
       if (event.target.checked) {
         personaList.push(event.target.id)
+        personaIDList.push(event.target.value)
       } else {
         personaList.pop(event.target.id)
+        personaIDList.pop(event.target.value)
       }
       console.log(personaList)
+      console.log(personaIDList)
       if (personaList.length === 0) {
         $('#savePDFButton').attr('disabled', true)
         $('#gotoDialogueButton').attr('disabled', true)
+        $('#deletePersonaButton').attr('disabled', true)
       } else if (personaList.length > 2){
         $('#gotoDialogueButton').attr('disabled', true)
       } else {
         // Enable the buttons
         $('#savePDFButton').attr('disabled', false)
         $('#gotoDialogueButton').attr('disabled', false)
+        $('#deletePersonaButton').attr('disabled', false)
 
         // Set the value of the hidden input to the personaList array
         $('#savePDFInput').val(JSON.stringify(personaList))
         $('#gotoDialogueInput').val(JSON.stringify(personaList))
+        $('#deletePersonaInput').val(JSON.stringify(personaIDList))
         console.log("test", $('#savePDFInput').val())
         console.log("test2", $('#gotoDialogueInput').val())
+        console.log("test3", $('#deletePersonaInput').val())
+
       }
     })
   })
