--- a/views/fromSavedPersona/userPersonaHome.ejs
+++ b/views/fromSavedPersona/userPersonaHome.ejs
@@ -4,7 +4,10 @@
 <%- include ("../partials/emptybackbar.ejs") %>
 
 <!-- title -->
-<div class="col text-center">
+<br>
+<br>
+<br>
+<div class="col text-center mx-5">
     <h3>Chat with a persona.</h3>
     <p>Have you ever wanted to talk to a character?</p>
 </div>
@@ -12,18 +15,31 @@
 </div>
 
 <!-- content -->
-<div class="container-fluid" style="padding-top: 100px;">
+<div class="container-fluid" style="padding-top: 50px;">
     <div class="row">
-        <form action="/dialogue/chat/user-persona-chat" method="post" class="text-center">
+        <form action="/saved/persona/dialogue/chat/user-persona-chat" method="post" class="text-center">
+
             <div class="col-12">
                 <div class="card text-center">
-                    <div class="card-body">
-                        <label class="card-title">Start your chat!</label><br />
-                        <input class="form-control" type="text" name="chat" placeholder="Enter what you want to say to the persona" />
+                    <div class="card-body mx-1">
+                        <label class="card-title">Persona:</label><br />
+                        <textarea class="form-control text-center" readonly><%= persona %></textarea>
                     </div>
                 </div>
             </div>
-            <br />
+<br>
+<br>
+<br>
+            <div class="col-12">
+                <div class="card text-center">
+                    <div class="card-body mx-1">
+                        <label class="card-title">Start your chat!</label><br>
+                        <input class="form-control" type="text" name="chat"
+                            placeholder="Enter what you want to say to the persona" />
+                    </div>
+                </div>
+            </div>
+            <br>
             <button class="btn" type="submit">Send</button>
         </form>
     </div>
