--- a/views/fromSavedPersona/innerDialogueHome.ejs
+++ b/views/fromSavedPersona/innerDialogueHome.ejs
@@ -1,50 +1,60 @@
 <!-- GENERAL CONTENT -->
 <!-- header and back header -->
 <%-include ("../partials/header-dialogue.ejs")%>
-<%- include ("../partials/emptybackbar.ejs") %>
+<div%- include ("../partials/emptybackbar.ejs") %>
 
-<!-- title -->
-<div class="col text-center">
-    <h3>Create an inner dialogue.</h3>
-    <p>Have you ever wondered what a persona could be thinking?</p>
-</div>
-</div>
-</div>
+    <!-- title -->
+    <br>
+    <br>
+    <br>
+    <div class="col text-center mx-5 mb-5">
+        <h3>Create an inner dialogue.</h3>
+        <p>Have you ever wondered what a persona could be thinking?</p>
+    </div>
+    </div>
+    </div>
 
-<!-- content -->
-<div class="container-fluid" style="padding-top: 30px;">
-    <div class="row">
-        <form action="/saved/persona/dialogue/chat/inner-dialogue" method="post" class="text-center">
-            <div class="col-12">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <label class="card-title">Persona:</label><br />
-                        <textarea class="form-control text-center" readonly><%= persona %></textarea>
+    <!-- content -->
+    <div class="container-fluid" style="padding-top: 30px;">
+        <div class="row">
+            <form action="/saved/persona/dialogue/chat/inner-dialogue" method="post" class="text-center">
+                <div class="col-12">
+                    <div class="card text-center">
+                        <div class="card-body mx-1">
+                            <label class="card-title">Persona:</label><br />
+                            <textarea class="form-control text-center" readonly><%= persona %></textarea>
+                        </div>
                     </div>
                 </div>
-
-                <div class="card-body">
-                    <label class="card-title">What situation is the persona faced with?</label><br />
-                    <input class="form-control" type="text" name="situation"
-                        placeholder="Enter the situation your persona is in" />
+                <br>
+                <br>
+                <div class="col-12">
+                    <div class="card text-center">
+                        <div class="card-body mx-1">
+                            <label class="card-title">What situation is the persona faced with?</label><br>
+                            <input class="form-control" type="text" name="plot"
+                                placeholder="Enter the plot/setting your persona is in" />
+                        </div>
+                    </div>
                 </div>
-            </div>
-    </div>
-    <div class="col-12">
-        <div class="card text-center">
-            <div class="card-body">
-                <label class="card-title">What kind of setting are they in?</label><br />
-                <input class="form-control" type="text" name="plot"
-                    placeholder="Enter the plot/setting your persona is in" />
-            </div>
+                <br>
+                <br>
+                <div class="col-12">
+                    <div class="card text-center">
+                        <div class="card-body mx-1">
+                            <label class="card-title">What kind of setting are they in?</label><br />
+                            <input class="form-control" type="text" name="plot"
+                                placeholder="Enter the plot/setting your persona is in" />
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <br>
+                <button class="btn" type="submit">Send</button>
+            </form>
         </div>
     </div>
-    <br />
-    <button class="btn" type="submit">Send</button>
-    </form>
-</div>
-</div>
 
-<!-- navbar and footer -->
-<%-include ("../partials/navbar.ejs")%>
-<%-include ("../partials/footer.ejs")%>
+    <!-- navbar and footer -->
+    <%-include ("../partials/navbar.ejs")%>
+    <%-include ("../partials/footer.ejs")%>
