added header in dialogue chat

--- a/views/fromSavedPersona/innerDialogueChat.ejs
+++ b/views/fromSavedPersona/innerDialogueChat.ejs
@@ -1,3 +1,5 @@
+<%-include ("../partials/header-persona.ejs")%>
+<%-include ("../partials/emptybackbar.ejs") %>
 
 <div class="container-fluid mb-5 pb-5" id="chatContainer">
     <!-- Existing chat messages -->
@@ -32,3 +34,8 @@
         <% } %>
     </div>
 </div>
+
+
+<!-- navbar and footer -->
+<%-include ("../partials/navbar.ejs")%>
+<%-include ("../partials/footer.ejs")%>
