--- a/views/dialogue/innerDialogueChat.ejs
+++ b/views/dialogue/innerDialogueChat.ejs
@@ -12,26 +12,34 @@
     <!-- <form action="/dialogue/chat/inner-dialogue" method="post"> -->
     <div class="col-12" id="botOutput">
       <div class="card">
-
-        <div class="card-body m-3">
-           <div class="card-text" name="data"><%- innerDialogueHistory[i].botResponse %>
+        <form action="/dialogue/chat/inner-dialogue/save" method="post">
+          <div class="col-12" id="botOutput">
+            <div class="card">
+              <!-- save button -->
+              <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit"
+                name="save" value="<%- i %>">
+                star_border
+              </button>
+              <div class="card-body m-3">
+                <div class="card-text" name="data"><%- innerDialogueHistory[i].botResponse %>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
+          <!-- </form> -->
+          <hr>
+          <% } %>
       </div>
     </div>
-    <!-- </form> -->
-    <hr>
-    <% } %>
-  </div>
-</div>
 
-<form action="/dialogue/chat/inner-dialogue" method="post" class="text-center input-container">
-  <div class="row">
-    <input class="form-control col" rows="1" cols="1" type="text" name="prompt" placeholder="<%= placeholderText %>" />
-    <button class="btn col-3" type="submit">Send</button>
-  </div>
-</form>
+    <form action="/dialogue/chat/inner-dialogue" method="post" class="text-center input-container">
+      <div class="row">
+        <input class="form-control col" rows="1" cols="1" type="text" name="prompt"
+          placeholder="<%= placeholderText %>" />
+        <button class="btn col-3" type="submit">Send</button>
+      </div>
+    </form>
 
-<!-- navbar and footer -->
-<%-include ("../partials/navbar.ejs")%>
-<%-include ("../partials/footer.ejs")%>
+    <!-- navbar and footer -->
+    <%-include ("../partials/navbar.ejs")%>
+    <%-include ("../partials/footer.ejs")%>
