--- a/views/fromSavedPersona/personaToPersonaChat.ejs
+++ b/views/fromSavedPersona/personaToPersonaChat.ejs
@@ -7,40 +7,44 @@
         <!-- Display bot's output -->
         <div class="col-12 my-2" id="botOutput">
             <div class="card">
-                <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit"
-                    name="save" value="<%= index %>">
-                    star_border
-                </button>
-                <div class="card-body m-3">
-                    <div class="card-title">Dialogue:</div>
-                    <% const conversationLines = entry.botResponse.split('\n'); %>
-                    <% for (let j = 0; j < conversationLines.length; j++) { %>
-                    <% const line = conversationLines[j].trim(); %>
-                    <% if (line) { %>
-                    <div class="card-text">
-                        <%= line %>
+                <form action="saved/persona/dialogue/chat/persona-to-persona/save" method="post">
+                    <div class="col-12" id="botOutput">
+                        <div class="card">
+                            <!-- save button -->
+                            <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon"
+                                type="submit" name="save" value="<%- i %>">
+                                star_border
+                            </button>
+                            <div class="card-body m-3">
+                                <div class="card-title">Dialogue:</div>
+                                <% const conversationLines = entry.botResponse.split('\n'); %>
+                                <% for (let j = 0; j < conversationLines.length; j++) { %>
+                                <% const line = conversationLines[j].trim(); %>
+                                <% if (line) { %>
+                                <div class="card-text">
+                                    <%= line %>
+                                </div>
+                                <br>
+                                <% } %>
+                                <% } %>
+                            </div>
+                        </div>
                     </div>
-                    <br>
-                    <% } %>
-                    <% } %>
-                </div>
             </div>
+            <hr>
+            <% }) %>
         </div>
-    </div>
-    <hr>
-    <% }) %>
-</div>
 
-<form action="/saved/persona/dialogue/chat/persona-to-persona-chat/save" method="post"
-    class="text-center input-container">
-    <div class="row">
-        <input class="form-control col" rows="1" cols="1" type="text" name="response"
-            placeholder="<%= placeholderText %>" />
-        <button class="btn col-3" type="submit">Send</button>
-    </div>
-</form>
+        <form action="/saved/persona/dialogue/chat/persona-to-persona-chat/save" method="post"
+            class="text-center input-container">
+            <div class="row">
+                <input class="form-control col" rows="1" cols="1" type="text" name="response"
+                    placeholder="<%= placeholderText %>" />
+                <button class="btn col-3" type="submit">Send</button>
+            </div>
+        </form>
 
 
-<!-- navbar and footer -->
-<%-include ("../partials/navbar.ejs")%>
-<%-include ("../partials/footer.ejs")%>
+        <!-- navbar and footer -->
+        <%-include ("../partials/navbar.ejs")%>
+        <%-include ("../partials/footer.ejs")%>
