--- a/views/dialogue/userPersonaHome.ejs
+++ b/views/dialogue/userPersonaHome.ejs
@@ -4,6 +4,9 @@
 <%- include ("../partials/emptybackbar.ejs") %>
 
 <!-- title -->
+<br>
+<br>
+<br>
 <div class="col text-center">
     <h3>Chat with a persona.</h3>
     <p>Have you ever wanted to talk to a character?</p>
@@ -12,22 +15,27 @@
 </div>
 
 <!-- content -->
-<div class="container-fluid" style="padding-top: 100px;">
+<div class="container-fluid" style="padding-top: 50px;">
     <div class="row">
         <form action="/dialogue/chat/user-persona-chat" method="post" class="text-center">
             <div class="col-12">
                 <div class="card text-center">
-                    <div class="card-body">
+                    <div class="card-body mx-1">
                         <label class="card-title">Persona</label><br />
-                        <input class="form-control" type="text" name="persona" placeholder="Enter a persona description" />
+                        <input class="form-control" type="text" name="persona"
+                            placeholder="Enter a persona description" />
                     </div>
                 </div>
             </div>
+            <br>
+            <br>
+            <br>
             <div class="col-12">
                 <div class="card text-center">
-                    <div class="card-body">
+                    <div class="card-body mx-1">
                         <label class="card-title">Start your chat!</label><br />
-                        <input class="form-control" type="text" name="chat" placeholder="Enter what you want to say to the persona" />
+                        <input class="form-control" type="text" name="chat"
+                            placeholder="Enter what you want to say to the persona" />
                     </div>
                 </div>
             </div>
