--- a/views/dialogue/personaToPersonaHome.ejs
+++ b/views/dialogue/personaToPersonaHome.ejs
@@ -4,7 +4,9 @@
 <%-include ("../partials/emptybackbar.ejs") %>
 
 <!-- title -->
-<div class="col text-center">
+<br>
+<br>
+<div class="col text-center  mx-4">
     <h3>Persona to Persona Chat</h3>
     <p>How would these two personas chat with each other?</p>
 </div>
@@ -12,38 +14,40 @@
 </div>
 
 <!-- content -->
-<div class="container-fluid" style="padding-top: 150px;">
+<div class="container-fluid" style="padding-top: 30px;">
     <div class="row">
         <form action="/dialogue/chat/persona-to-persona-chat" method="post" class="text-center">
             <div class="col-12">
                 <div class="card text-center">
-                    <div class="card-body">
+                    <div class="card-body mx-1">
                         <label class="card-title">Describe the first persona</label><br />
                         <input class="form-control" type="text" name="firstPersona"
                             placeholder="Enter a persona description" />
                     </div>
                 </div>
             </div>
-
+<br>
             <div class="col-12">
                 <div class="card text-center">
-                    <div class="card-body">
+                    <div class="card-body mx-1">
                         <label class="card-title">Describe the second persona</label><br />
                         <input class="form-control" type="text" name="secondPersona"
                             placeholder="Enter the situation your persona is in" />
                     </div>
                 </div>
             </div>
+            <br>
             <div class="col-12">
                 <div class="card text-center">
-                    <div class="card-body">
+                    <div class="card-body mx-1">
                         <label class="card-title">What kind of situation are they in?</label><br />
                         <input class="form-control" type="text" name="situation"
                             placeholder="Enter the setting the personas are in" />
                     </div>
                 </div>
             </div>
-            <br />
+            <br>
+            <br>
             <button class="btn" type="submit">Send</button>
         </form>
     </div>
