--- a/views/dialogue/personaToPersonaHome.ejs
+++ b/views/dialogue/personaToPersonaHome.ejs
@@ -26,7 +26,7 @@
                     </div>
                 </div>
             </div>
-<br>
+            <br>
             <div class="col-12">
                 <div class="card text-center">
                     <div class="card-body mx-1">
@@ -52,6 +52,22 @@
         </form>
     </div>
 </div>
+
+<div class="px-5 text-center d-none" id="loadingCard" style="padding-top: 200px;">
+    <span id="loadingContainer"><i class="fa-solid fa-cat fa-bounce fa-2xl" style="color: #ffffff;"></i></i></span>
+    <p style="color: #ffffff;">Please watch this cat while we finish generating!</p>
+</div>
+</div>
+
+<script>
+    $(document).ready(function () {
+        $('#send').click(function () {
+            // show card with loading indicator
+            $("#loadingCard").removeClass("d-none");
+            $("#generalContainer").addClass("d-none");
+        });
+    });
+</script>
 
 <!-- navbar and footer -->
 <%-include ("../partials/navbar.ejs")%>
