Moved images, client side js src files, and css files to public directory and fixed the corresponding routes to ensure no error in page rendering

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -7,32 +7,32 @@ body {
 }
 
 .invsona-bg {
-  background: url("../images/background/bg.jpg") no-repeat center top fixed;
+  background: url("/images/background/bg.jpg") no-repeat center top fixed;
   background-size: cover;
 }
 
 .invsona-bg-dark{
-  background: url("../images/background/bg-dark.jpg") no-repeat center top fixed;
+  background: url("/images/background/bg-dark.jpg") no-repeat center top fixed;
   background-size: cover;
 }
 
 .persona-bg{
-  background: url("../images/background/persona_bg.jpg") no-repeat center top fixed;
+  background: url("/images/background/persona_bg.jpg") no-repeat center top fixed;
   background-size: cover;
 }
 
 .persona-bg-dark{
-  background: url("../images/background/persona_bg_dark.jpg") no-repeat center top fixed;
+  background: url("/images/background/persona_bg_dark.jpg") no-repeat center top fixed;
   background-size: cover;
 }
 
 .dialogue-bg{
-  background: url("../images/background/dialogue_bg.jpg") no-repeat center top fixed;
+  background: url("/images/background/dialogue_bg.jpg") no-repeat center top fixed;
   background-size: cover;
 }
 
 .dialogue-bg-dark{
-  background: url("../images/background/dialogue_bg_dark.jpg") no-repeat center top fixed;
+  background: url("/images/background/dialogue_bg_dark.jpg") no-repeat center top fixed;
   background-size: cover;
 }
 
@@ -78,7 +78,7 @@ h1 {
 }
 
 .meowpointer{
-  cursor: url('../images/cats/nyancat.png'), auto;
+  cursor: url('/images/cats/nyancat.png'), auto;
 }
 
 .special:hover{
@@ -132,7 +132,7 @@ h1 {
 
 @keyframes flash {
   from {
-    background-image: url('../images/cats/nyancat.png');
+    background-image: url('/images/cats/nyancat.png');
     background-color: #81FFD9;
     background-size: cover;
     background-repeat: no-repeat;
