--- a/views/authorization/logout.ejs
+++ b/views/authorization/logout.ejs
@@ -5,14 +5,14 @@
 <!-- video background -->
 <div class="bg">
 <video autoplay muted loop id="background">
-  <source src="./images/blue_bg.mp4" type="video/mp4" />
+  <source src="/images/blue_bg.mp4" type="video/mp4" />
 </video>
 </div>
 
 <!-- logo -->
 <div class="container-fluid" id="login" style="padding-top: 200px;">
   <div id="box">
-    <img id="logo" class="special" src="../images/invsona/invsona.png" alt="invsona logo" />
+    <img id="logo" class="special" src="/images/invsona/invsona.png" alt="invsona logo" />
     <h1 class="pt-3 glow" onclick="secret()" id="title">Invsona</h1>
     <div class="container mb-5">
       <p id="slogan">Character Creation at Your Finger Tips</p>
