--- a/views/authorization/resetPassword.ejs
+++ b/views/authorization/resetPassword.ejs
@@ -5,7 +5,7 @@
 <!-- content -->
 <!-- video background -->
 <video autoplay muted loop id="background">
-  <source src="./images/blue_bg.mp4" type="video/mp4" />
+  <source src="/images/blue_bg.mp4" type="video/mp4" />
 </video>
 
 <div class="container-fluid text-center align-self-center" id="login">
