--- a/views/fromSavedPersona/innerDialogueHome.ejs
+++ b/views/fromSavedPersona/innerDialogueHome.ejs
@@ -1,7 +1,7 @@
 <!-- GENERAL CONTENT -->
 <!-- header and back header -->
 <%-include ("../partials/header-dialogue.ejs")%>
-<div%- include ("../partials/emptybackbar.ejs") %>
+<%- include ("../partials/emptybackbar.ejs") %>
 
     <!-- title -->
     <br>
