--- a/views/partials/header-dialogue.ejs
+++ b/views/partials/header-dialogue.ejs
@@ -1,8 +1,8 @@
 <%- include('../partials/header-start.ejs') %>
 
     <!--CSS files-->
-    <link rel="stylesheet" href="../styles/navbar.css" />
-    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="/styles/navbar.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
 
   </head>
   <body class="dialogue-bg mb-5 pb-5">
