--- a/views/partials/header-internal.ejs
+++ b/views/partials/header-internal.ejs
@@ -1,10 +1,10 @@
 <%- include('../partials/header-start.ejs') %>
 
   <!--CSS files-->
-  <link rel="stylesheet" href="../styles/navbar.css" />
-  <link rel="stylesheet" href="../styles/home.css" />
-  <link rel="stylesheet" href="../styles/profile.css" />
-  <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="stylesheet" href="/styles/navbar.css" />
+  <link rel="stylesheet" href="/styles/home.css" />
+  <link rel="stylesheet" href="/styles/profile.css" />
+  <link rel="stylesheet" href="/styles/style.css" />
 </head>
 
 <body class="invsona-bg mb-5 pb-5">
