--- a/views/partials/header-persona.ejs
+++ b/views/partials/header-persona.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header-start.ejs') %>
   <!--CSS files-->
-  <link rel="stylesheet" href="../styles/navbar.css" />
-  <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="stylesheet" href="/styles/navbar.css" />
+  <link rel="stylesheet" href="/styles/style.css" />
 </head>
 
 <body class="persona-bg mb-5 pb-5">
