--- a/views/persona/savedPrompt.ejs
+++ b/views/persona/savedPrompt.ejs
@@ -7,7 +7,7 @@
 <div class="col-2 px-2 text-center">
   <form action="/persona/saved-prompt/delete" method="post">
     <input id=deleteInput type="hidden" name="promptIDList" value="" />
-    <a class="btn btn-sm material-symbols-rounded p-1" id="deleteButton" disabled>delete</a>
+    <button class="btn btn-sm material-symbols-rounded p-1" id="deleteButton" disabled>delete</button>
   </form>
 </div>
 </div>
