--- a/views/profile/aboutUs.ejs
+++ b/views/profile/aboutUs.ejs
@@ -11,7 +11,7 @@
 
 <div class="container pt-1">
     <div class="card">
-        <img src="../images/invsona/invsona-banner.png" width="100px" height="225px" class="card-img-top" alt="...">
+        <img src="/images/invsona/invsona-banner.png" width="100px" height="225px" class="card-img-top" alt="...">
         <div class="card-body">
           <div class="card-text">
             <h2>Mission</h2>
