--- a/views/error/404.ejs
+++ b/views/error/404.ejs
@@ -6,13 +6,13 @@
 <!-- video background -->
 <div class="bg">
 <video autoplay muted loop id="background" >
-  <source src="../images/blue_bg.mp4" type="video/mp4" />
+  <source src="/images/blue_bg.mp4" type="video/mp4" />
 </video>
 </div>
 <!-- logo -->
 <div class="container-fluid meowpointer" id="login" style="padding-top: 180px;">
   <div id="box" onclick="secret()">
-      <img id="logo" class="special" src="../images/invsona/invsona.png" alt="invsona logo"/>
+      <img id="logo" class="special" src="/images/invsona/invsona.png" alt="invsona logo"/>
     <h1 class="pt-3 text-bg-light glow-flash" id="title">Invsona</h1>
     <div class="container mb-5">
       <p id="slogan">Character Creation at Your Finger Tips</p>
