--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 </body>
 
   <!-- js files -->
-  <script src="../src/secret.js"></script>
-  <script src="../src/darkmode.js"></script>
+  <script src="/src/secret.js"></script>
+  <script src="/src/darkmode.js"></script>
 </html>
