--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -23,7 +23,7 @@
       <div class="icon col py-3">
         <a href="/home">
           <img
-            src="../images/invsona/home.png"
+            src="/images/invsona/home.png"
             alt="home"
             width="50px"
             height="50px"
