--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -11,7 +11,7 @@
             <% if (profileImage) { %>
               style="background-image: url(data:<%= profileImage.contentType %>;base64,<%= profileImage.data.toString('base64') %>)"
             <% } else { %>
-              style="background-image: url(../images/cats/cat_placeholder.png)"
+              style="background-image: url(/images/cats/cat_placeholder.png)"
             <% } %>
             id="userImage">
     
