--- a/views/saved/saved-persona.ejs
+++ b/views/saved/saved-persona.ejs
@@ -1,29 +1,38 @@
 <!-- SAVED PAGE -->
 <!-- header -->
-<%-include ('../partials/header-internal.ejs')%>
+<%-include ('../partials/header-persona.ejs')%>
 
 <!-- back title bar -->
 <%-include ('../partials/emptybackbar.ejs')%>
+
+<!-- content -->
 <div class="col text-center">
   <h1 class="align-middle">SAVED PERSONA</h1>
-  <form action="/saved/persona/save-as-pdf" method="post">
-    <input id=savePDFInput type="hidden" name="personaList" value="" />
-    <button class="btn btn-sm position-absolute top-50 end-0 translate-middle material-symbols-rounded" id="savePDFButton" disabled>picture_as_pdf</button>
-  </form>
-  <form action="/persona/saved-persona/dialogue-filters" method="post">
-    <input id=gotoDialogueInput type="hidden" name="personaList" value="" />
-    <button class="btn btn-sm material-symbols-rounded text-center" id="gotoDialogueButton" disabled>forum</button>
-  </form> 
-  <form action="/persona/saved-persona/delete-persona" method="post">
-    <input id=deletePersonaInput type="hidden" name="personaIDList" value="" />
-    <button class="btn btn-sm material-symbols-rounded text-center" id="deletePersonaButton" disabled>delete</button>
-  </form>
 </div>
+<div class="row text-center mx-3" >
+  <div class="col">
+    <form action="/saved/persona/save-as-pdf" method="post">
+      <input id=savePDFInput type="hidden" name="personaList" value="" />
+      <button class="btn btn-sm material-symbols-rounded" id="savePDFButton" disabled>picture_as_pdf</button>
+    </form>
+  </div>
+  <div class="col">
+    <form action="/persona/saved-persona/dialogue-filters" method="post">
+      <input id=gotoDialogueInput type="hidden" name="personaList" value="" />
+      <button class="btn btn-sm material-symbols-rounded text-center" id="gotoDialogueButton" disabled>forum</button>
+    </form>
+  </div>
+  <div class="col">
+    <form action="/persona/saved-persona/delete-persona" method="post">
+      <input id=deletePersonaInput type="hidden" name="personaIDList" value="" />
+      <button class="btn btn-sm material-symbols-rounded text-center" id="deletePersonaButton" disabled>delete</button>
+    </form>
+  </div>
 </div>
 </div>
 
-<div class="container mt-5" style="padding-bottom: 100px; padding-top: 100px;">
-  <div class="accordion accordion-flush" id="accordionFlushExample">
+<div class="container card mt-2">
+  <div class="accordion-bg-dark accordion-flush p-3" id="accordionFlushExample">
     <% for (var i=0; i<savedPersona.length; i++) { %>
     <div class="accordion-item">
       <h2 class="accordion-header">
