Readjust inner dialogue home

--- a/views/dialogue/innerDialogueHome.ejs
+++ b/views/dialogue/innerDialogueHome.ejs
@@ -4,12 +4,9 @@
 <%- include ("../partials/emptybackbar.ejs") %>
 
 <!-- title -->
-<br>
-<br>
-<div class="col text-center mx-5 mb-5">
-    <h3>Create an inner dialogue.</h3>
-    <p>Have you ever wondered what a persona could be thinking?</p>
-</div>
+<div class="col text-center">
+    <h1>Create an inner dialogue.</h1>
+    <p style="font-size: 12px;">Have you ever wondered what a persona could be thinking?</p>
 </div>
 </div>
 
@@ -26,7 +23,7 @@
                     </div>
                 </div>
             </div>
-            <br>
+            
             <div class="col-12">
                 <div class="card text-center">
                     <div class="card-body mx-1">
@@ -36,7 +33,7 @@
                     </div>
                 </div>
             </div>
-            <br>
+            
             <div class="col-12">
                 <div class="card text-center">
                     <div class="card-body mx-1">
@@ -46,9 +43,8 @@
                     </div>
                 </div>
             </div>
-            <br>
-            <br>
-            <button class="btn" type="submit">Send</button>
+            
+            <button class="btn mt-2" type="submit">Send</button>
         </form>
     </div>
 </div>
